/*
 * $Id: ChangeLog,v 1.1869 2003/12/13 18:09:27 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-13 11:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c
    + Added Owners Management support.
    * Minor optimizations and formating.

  * tests/hash.prg
    * Minor formating

2003-12-13 19:10 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/tests/rddspeed.prg
    * close and then reopen database after index creation to workaround
      Clipper bug. After index creation Clipper lose index locking
      and works like in exclusive mode when in fact it's shared mode.

2003-12-13 18:52 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * typo in comment fixed

  * xharbour/Makefile
  * xharbour/bin/hb-func.sh
  * xharbour/config/dir.cf
  * xharbour/config/install.cf
  * xharbour/config/dos/install.cf
  * xharbour/config/linux/install.cf
  * xharbour/config/w32/install.cf
    ! fixed redundant pass in 'install' I introduced recently
    * next changes and cleanups for msys build

2003-12-13 12:43 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * hrbdll.vc
  * makefile.nt
  * makefile.vc
    + source/rtl/readline.c

2003-12-13 14:45 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rtl/readline.c
     ! Optimized and improved HB_FREADLINE()
  * source/vm/dbsdf.prg
     ! Fixed APPEND FROM SDF (now using HB_FREADLINE() to read txt lines)
  * source/tests/dbsdf.prg
     + Sample test to APPEND FROM SDF
  * source/tests/tstline.prg
     + Sample test to HB_FREADLINE()

2003-12-13 08:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * bin/bld.bat
     + Added support for %HB_USER_LIBS% for BCC32 and MSVC

   * source/vm/macro.c
     ! Fixed another lurking bug resulting from premature release of item containing string to be parsed.
